tests/errors/module_lazy_cycle.dang
# A real module initialization cycle can be hidden behind an auto-called function.
# The lazy runtime initializer should report the cycle when the variable is forced.
lazyCycleA: String! = lazyCycleF
lazyCycleB: String! = lazyCycleA

lazyCycleF: String! {
  lazyCycleB
}
